--- a/config.ini
+++ b/config.ini
@@ -2,6 +2,7 @@ debug = 1
 database = testdata.db
 site_name = Cloudmark Viewer
 tplpak = bootstrap
+template = bootstrap
 links_per_page = 20
 cats_per_page = 50
 globalstrip[] = search
