Added more supporting code for modifying data

--- a/config.ini
+++ b/config.ini
@@ -5,6 +5,7 @@ tplpak = bootstrap
 template = bootstrap
 links_per_page = 20
 cats_per_page = 50
+enableMod = true
 globalstrip[] = search
 globalstrip[] = searchLoc
 globalstrip[] = searchType
