Updated INI Formatting

--- a/config.ini
+++ b/config.ini
@@ -1,10 +1,30 @@
-debug = 1
+[Core]
+;
+; Values that affect core functionality
+; 
 database = testdata.db
+debug = 1 ;1 or 0 (Optional)
+
+[Display]
+;
+; Values which affect what's displayed
+;
 site_name = Cloudmark Viewer
 template = bootstrap
 links_per_page = 20
 cats_per_page = 50
-enableMod = true
+
+[GlobalStrip]
+;
+; Values which affect which values remain in internal clickable links
+;
 globalstrip[] = search
 globalstrip[] = searchLoc
 globalstrip[] = searchType
+
+[Other]
+;
+; Values which do not fit in any other section
+;
+enableMod = true ;true/false whether or not to allow access to the modification section
+
